Fix: page jump on slide switch

--- a/src/pages/MainPage/HomeSection/SliderInfos/SliderInfos.css
+++ b/src/pages/MainPage/HomeSection/SliderInfos/SliderInfos.css
@@ -1,3 +1,7 @@
+.slider {
+  min-height: 245px;
+}
+
 .slider-buttons {
   display: flex;
   column-gap: 40px;
